clusters/home/applications/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/target: "k3s-homelab.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
  - host: hello.asdfx.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
